--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,21 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'dagger.hilt.android.plugin'
     id 'com.google.gms.google-services'
+    id 'kotlin-kapt'
+
 
 }
 
 android {
     namespace 'com.example.netch'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.netch"
         minSdk 21
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -71,6 +74,18 @@ dependencies {
 
 //    navigation
     implementation 'androidx.navigation:navigation-compose:2.5.3'
+//    hilt
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+//    dagger hilt
+    implementation "com.google.dagger:hilt-android:2.43.2"
+    kapt "com.google.dagger:hilt-android-compiler:2.43.2"
+
+    implementation "androidx.compose.runtime:runtime:$compose_ui_version"
+    implementation "androidx.compose.runtime:runtime-livedata:1.4.0-alpha04"
+
+
+
+
 
 
 }
